<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_book_delete"
        android:icon="@drawable/ic_delete_pink_24dp"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_book_edit"
        android:icon="@drawable/ic_edit_pink_24dp"
        android:title="@string/edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_book_add_author"
        android:title="@string/addAuthor"/>
    <item
        android:id="@+id/action_book_add_series"
        android:title="@string/addSeries"/>
    <item
        android:id="@+id/action_book_del_author"
        android:title="@string/delAuthor"/>
    <item
        android:id="@+id/action_book_del_series"
        android:title="@string/delSeries"/>
</menu>