<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.menu.NewItemMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitleActivityNewItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/title_activity_new_item_menu"
            android:textColor="@color/colorPrimary"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnNewExemplar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/exemplar"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnNewBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/bookHint"
            android:textSize="20dp" />

        <Button
            android:id="@+id/bntNewAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/authorHint"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnNewSeries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/collectionHint"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnNewStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/statusHint"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnNewPublisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/editorHint"
            android:textSize="20dp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>