<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.alteration.ForgottenPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="5dp">

        <TextView
            android:id="@+id/txtTitleForgPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_forgotten_password"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/txtNameForgPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/edtNameForgPass"
            android:text="@string/name"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtNameForgPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nameHint"
            android:inputType="textPersonName"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/txtUsernameForgPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/edtUsernameForgPass"
            android:text="@string/userName"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtUsernameForgPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/userNameHint"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/txtEmailForgPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/edtEmailForgPass"
            android:text="@string/email"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtEmailForgPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/btnForgottenPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/confirm"
            android:textColor="@color/colorWhite"
            android:textSize="20dp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>