<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.form.NewUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <TextView
            android:id="@+id/txtNewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/edtNewName"
            android:paddingTop="5dp"
            android:text="@string/name"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtNewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nameHint"
            android:inputType="textPersonName"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/txtNewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/edtNewEmail"
            android:text="@string/email"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtNewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/txtNewUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/edtNewUsername"
            android:text="@string/userName"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtNewUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/userNameHint"
            android:inputType="textPersonName"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/txtNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/edtNewPassword"
            android:text="@string/password"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/txtNewPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/edtNewPassword2"
            android:text="@string/passwordConfirmation"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtNewPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/btnCreateNewUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/confirm"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>