<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.menu.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitleMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_title"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textColor="@color/colorPrimary"
            android:labelFor="@id/edtLoginUserName"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/edtLoginUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/userHint"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/colorPrimary"
            android:labelFor="@id/edtLoginPassword"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/passwordHint"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorWhite"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgotten_password"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/txtNewUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text= "@string/create_new_user"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>