<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.alteration.ChangePasswordActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:paddingHorizontal="5dp">

        <TextView
            android:id="@+id/txtTitleChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_change_password"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/txtPasswordChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/edtPasswordChange"
            android:text="@string/password"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtPasswordChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/txtPasswordChange2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/edtPasswordChange2"
            android:text="@string/passwordConfirmation"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtPasswordChange2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/confirm"
            android:textColor="@color/colorWhite"
            android:textSize="20dp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>