<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.form.BookFormActivity">


    <LinearLayout
        android:id="@+id/linLayBookForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:paddingHorizontal="5dp"
        app:layout_constraintTop_toBottomOf="parent">

        <TextView
            android:id="@+id/txtActivityTitleBookForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_book_form"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="30dp" />

        <LinearLayout
            android:id="@+id/linLayBookFormID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/txtIdBookForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/edtIdBookForm"
                android:text="@string/id"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/edtIdBookForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:text="TextView"
                android:textColor="@color/colorBlack"
                android:textSize="20dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtTitleBookForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/edtTitleBookForm"
            android:text="@string/title"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtTitleBookForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/titleHint"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txtGenreBookForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/edtGenreBookForm"
            android:text="@string/genre"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtGenreBookForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/genreHint"
            android:textSize="20dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>