<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.menu.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnAlterUser"
            android:layout_width="match_parent"
            android:textSize="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"
            android:text="@string/alter_user" />

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="@string/title_activity_change_password"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnAlterAvatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="@string/alter_avatar"
            android:textSize="20dp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>