<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.form.StandardFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtStandardFormTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/standardForm"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linLayStandardFormID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/txtIdStandardForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:textStyle="bold"
                android:labelFor="@id/edtIdStandardForm"/>

            <TextView
                android:id="@+id/edtIdStandardForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@color/colorBlack"
                android:textSize="20dp"
                android:paddingStart="5dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/txtStandardFormName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/colorPrimary"
            android:labelFor="@id/edtStandardFormName"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtStandardFormName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/nameHint"
            android:textSize="20dp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>